--- a/template/tmpl/details.tmpl
+++ b/template/tmpl/details.tmpl
@@ -141,7 +141,7 @@ var self = this;
 	<dd class="tag-source">
 		<ul class="dummy">
 			<li>
-				<a href="https://github.com/bdistin/fs-nextra/blob/master/src/<?js= meta.shortpath + "#" + meta.lineno ?>"><?js= meta.shortpath.slice(0, -5) + "#" + meta.lineno ?></a>
+				<a href="https://github.com/bdistin/fs-nextra/blob/master/src/<?js= meta.shortpath + "#L" + meta.lineno ?>"><?js= meta.shortpath + "#L" + meta.lineno ?></a>
 			</li>
 		</ul>
 	</dd>
