--- a/template/tmpl/details.tmpl
+++ b/template/tmpl/details.tmpl
@@ -148,8 +148,7 @@ var self = this;
 	<?js } else if (data.meta && this.navOptions.outputSourcePath) { ?>
 	<dt class="tag-source method-doc-label method-doc-details-label">Source:</dt>
 	<dd class="tag-source">
-		<?js= meta.shortpath ?>
-	</dd>
+		<a href="https://github.com/bdistin/fs-nextra/blob/master/src/<?js= meta.shortpath + "#L" + meta.lineno ?>"><?js= meta.shortpath + "#L" + meta.lineno ?></a>	</dd>
 	<?js } ?>
 
 	<?js if (data.tutorials && tutorials.length) {?>
