--- a/template/tmpl/layout.tmpl
+++ b/template/tmpl/layout.tmpl
@@ -104,7 +104,7 @@
 <?js } ?>
 
 	<!-- <span class="copyright">
-		<a href="https://github.com/bdistin/fs-nextra">Fork me on Github</a>
+		<a href="https://github.com/dirigeants/klasa">Fork me on Github</a>
 	</span> -->
 
 <!-- <span class="jsdoc-message">
