--- a/template/tmpl/tutorial.tmpl
+++ b/template/tmpl/tutorial.tmpl
@@ -1,19 +1,20 @@
 <section class="tutorial-section">
 
 <header>
-    <?js if (children.length > 0) { ?>
-    <ul><?js
-        var self = this;
-        children.forEach(function(t) { ?>
-        <li><?js= self.tutoriallink(t.name) ?></li>
-    <?js }); ?></ul>
-    <?js } ?>
-
     <h2><?js= header ?></h2>
 </header>
 
 <article>
     <?js= content ?>
 </article>
+
+<?js if (children.length > 0) { ?>
+<h2>Further Reading:</h2>
+<ul><?js
+    var self = this;
+    children.forEach(function(t) { ?>
+    <li><?js= self.tutoriallink(t.name) ?></li>
+<?js }); ?></ul>
+<?js } ?>
 
 </section>
