--- a/template/tmpl/layout.tmpl
+++ b/template/tmpl/layout.tmpl
@@ -30,7 +30,7 @@
 	</div>
 	<div class="navbar-collapse collapse" id="topNavigation">
 		<ul class="nav navbar-nav">
-			<?js this.nav.topLevelNav.forEach(function(entry){ ?>
+			<?js this.nav.topLevelNav.filter(entry => entry.title !== 'Externals').forEach(function(entry){ ?>
 			<li class="dropdown">
 				<a href="<?js= entry.link ?>" class="dropdown-toggle" data-toggle="dropdown"><?js= entry.title ?><b class="caret"></b></a>
 				<ul class="dropdown-menu <?js= that.navOptions.navType ==='inline' ? 'inline' : '' ?>">
