--- a/template/tmpl/type.tmpl
+++ b/template/tmpl/type.tmpl
@@ -1,7 +1,8 @@
 <?js
     var data = obj;
     var self = this;
-    data.forEach(function(name, i) { ?>
-<span class="param-type"><?js= self.linkto(name, self.htmlsafe(name)) ?></span>
+    data.forEach(function(name, i) { const match = /external:\w+/.test(name) ? self.find({longname: /external:\w+/.exec(name)[0]}) : undefined; ?>
+<span class="param-type"><?js if(match && match[0]) { ?><?js= `<a href="${match[0].see[0].slice(7, -1)}">${name}</a>` ?><?js } else { ?><?js= self.linkto(name, self.htmlsafe(name)) ?>
+<?js } ?></span>
 <?js if (i < data.length-1) { ?>|<?js } ?>
 <?js }); ?>
