--- a/template/tmpl/layout.tmpl
+++ b/template/tmpl/layout.tmpl
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title><?js= this.navOptions.systemName ?> <?js= title ?></title>
+	<link rel="shortcut icon" href="<?js= this.navOptions.favicon || 'img/favicon.ico'	 ?>">
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
